enhance request body
