# app/Http/Controllers/API/Address/UserAddressController.php
@@ -39,9 +39,129 @@ class UserAddressController extends Controller
      *     description="Endpoint to add user's address",
      *     @OA\RequestBody(
      *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 type="object",
+     *             required={"name", "mobile_number", "address", "area", "pin_code", "city", "state", "default_address"},
+     *             @OA\Property(
+     *                 property="name",
+     *                 type="string",
+     *                 description="Name of the recipient",
+     *                 example="John Doe"
+     *             ),
+     *             @OA\Property(
+     *                 property="mobile_number",
+     *                 type="string",
+     *                 description="Mobile number of the recipient",
+     *                 example="9876543210"
+     *             ),
+     *             @OA\Property(
+     *                 property="address",
+     *                 type="string",
+     *                 description="Street address of the recipient",
+     *                 example="123 Elm Street"
+     *             ),
+     *             @OA\Property(
+     *                 property="area",
+     *                 type="string",
+     *                 description="Area or locality of the address",
+     *                 example="Downtown"
+     *             ),
+     *             @OA\Property(
+     *                 property="pin_code",
+     *                 type="string",
+     *                 description="Postal code of the address",
+     *                 example="560001"
+     *             ),
+     *             @OA\Property(
+     *                 property="city",
+     *                 type="string",
+     *                 description="City of the address",
+     *                 example="Bangalore"
+     *             ),
+     *             @OA\Property(
+     *                 property="state",
+     *                 type="string",
+     *                 description="State of the address",
+     *                 example="Karnataka"
+     *             ),
+     *             @OA\Property(
+     *                 property="default_address",
+     *                 type="boolean",
+     *                 description="Indicates if this is the default address",
+     *                 example=true
+     *             )
+     *         ))
+     *     ),
+     *     @OA\Response(
+     *          response="200", 
+     *          description="ok",
+     *          @OA\JsonContent(ref="#/components/schemas/ApiResponse")
+     *      ),
+     * )
+     */
+    public function store(StoreUserAddress $request)
+    {
+        $validatedData = $request->validated();
+        $user = auth()->user();
+        if ($validatedData['default_address']) {
+            $user->addresses()->update(['default_address' => false]);
+        }
+        $address = $user->addresses()->create($validatedData);
+        return $this->success(200, 'New address added', $address);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/addresses/{id}",
+     *     tags={"address"},
+     *     security={{"bearerAuth": {}}},
+     *     summary="Get address by id",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response="200", 
+     *          description="ok",
+     *          @OA\JsonContent(ref="#/components/schemas/ApiResponse")
+     *      ),
+     * )
+     */
+    public function show(string $id)
+    {
+        $user = auth()->user();
+        $address = $user->addresses()->findOrFail($id);
+        return $this->success(200, 'Address updated successfully', $address);
+
+    }
+
+
+    /**
+     * @OA\Put(
+     *     path="/addresses/{id}",
+     *     tags={"address"},
+     *     security={{"bearerAuth": {}}},
+     *     summary="update user address",
+     *     description="Endpoint to update user's address",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
      *         @OA\JsonContent(
      *             type="object",
-     *             required={"name", "mobile_number", "address", "area", "pin_code", "city", "state", "default_address"},
+     *             required={},
      *             @OA\Property(
      *                 property="name",
      *                 type="string",
@@ -99,47 +219,6 @@ class UserAddressController extends Controller
      *      ),
      * )
      */
-    public function store(StoreUserAddress $request)
-    {
-        $validatedData = $request->validated();
-        $user = auth()->user();
-        if ($validatedData['default_address']) {
-            $user->addresses()->update(['default_address' => false]);
-        }
-        $address = $user->addresses()->create($validatedData);
-        return $this->success(200, 'New address added', $address);
-    }
-
-    /**
-     * @OA\Get(
-     *     path="/addresses/{id}",
-     *     tags={"address"},
-     *     security={{"bearerAuth": {}}},
-     *     summary="Get address by id",
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="integer"
-     *         )
-     *     ),
-     *     @OA\Response(
-     *          response="200", 
-     *          description="ok",
-     *          @OA\JsonContent(ref="#/components/schemas/ApiResponse")
-     *      ),
-     * )
-     */
-    public function show(string $id)
-    {
-        $user = auth()->user();
-        $address = $user->addresses()->findOrFail($id);
-        return $this->success(200, 'Address updated successfully', $address);
-
-    }
-
-    
     public function update(UpdateUserAddress $request, string $id)
     {
         $user = auth()->user();
